# whisper_ct2

./: .credo.exs  .formatter.exs  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  checksum-Elixir.WhisperCt2.Native.exs  mix.exs  usage-rules.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  integration.yml  release.yml  security.yml
config/: config.exs
lib/: whisper_ct2.ex
lib/whisper_ct2/: error.ex  model.ex  native.ex  pcm.ex  segment.ex  transcription.ex  wav.ex  word.ex
native/whisper_ct2_native/: Cargo.toml
native/whisper_ct2_native/src/: align.rs  errors.rs  lib.rs  preprocessor.rs  tokens.rs  transcribe.rs
test/: integration_test.exs  test_helper.exs  whisper_ct2_test.exs
test/fixtures/mel_golden/: input.pcm_f32  mel.f32  meta.json  preprocessor_config.json
test/fixtures/words_golden/: audio_path.txt  meta.json  words.json
test/support/: fixtures.ex  wav.ex
test/whisper_ct2/: error_test.exs  nif_contract_test.exs  pcm_test.exs  wav_test.exs
tools/mel-reference/: generate.py
tools/words-reference/: generate.py
